Fix some spacing issues, hopefully last push for the night

--- a/static/stylesheets/css/main.css
+++ b/static/stylesheets/css/main.css
@@ -344,7 +344,7 @@ header .info {
 .conference-points li {
   display: inline-block;
   width: 19%;
-  margin: 0 3% 1.5rem;
+  margin: 0 3%;
   vertical-align: top;
   font-size: 18px;
   font-size: 1rem;
@@ -512,7 +512,7 @@ footer a {
   /* line 2, ../sass/_devices.sass */
   .conference-points li {
     width: 38%;
-    margin: 0 6%;
+    margin: 0 6% 48px;
   }
 }
 @media print {
