--- a/static/stylesheets/sass/_global.sass
+++ b/static/stylesheets/sass/_global.sass
@@ -101,7 +101,7 @@ header
   li
     display: inline-block
     width: 19%
-    margin: 0 3% 1.5rem
+    margin: 0 3%
     vertical-align: top
     +adjust-font-size-to($base-font-size)
   h3
